--- a/media_query.css
+++ b/media_query.css
@@ -1,15 +1,16 @@
 /*Adaptive for phones viewport =< 480*/
 @media (max-width: 480px)
 {
-	.header {
+	.header :not(:first-child){
 		display: none;
+		position: relative;
 	}
 
 	.menu_for_phones {
-		position: relative;
+		position: absolute;
 		float: left;
 		display: block;
-		z-index: 3;
+		z-index: 4;
 		font-family: 'PT Sans', sans-serif;
 		font-size: 15px;
 	}
@@ -63,6 +64,13 @@
 		display: block;
 	}
 
+								/*Section 2*/
+	.level_skills {
+		flex-direction: column;
+		max-width: 320px;
+	}
+
+
 								/*Section 3*/
 	.few_sweat_photo {
 		flex-direction: column;
@@ -102,7 +110,20 @@
 		margin-bottom: 30px;
 	}
 
-										/*Section 8*/
+										/*Section 6*/
+	.contact_inf {
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+	}
+	.contact_inf .title_in_sup {
+		justify-content: center;
+	}
+	.contact_inf > div:first-child {
+		margin-bottom: 20px;
+	}
+
+										/*Section 7*/
 	.paparazzi {
 		flex-direction: column;
 		align-items: center;
